# mozmlops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.troubleshooting.inference.md  README.troubleshooting.md  pyproject.toml  setup.py
.circleci/: config.yml
artifactstore/: __init__.py
docs/: Makefile  conf.py
examples/image_classifier/: README.md  image_classifier.py  image_classifier_as_notebook.ipynb  image_classifier_flow.py  image_classifier_model.py  requirements.example_image_classifier.txt
examples/ray_serve/batched_translator/: README.md  batched_translator.py  requirements.batched_translator.txt  serve_config.yaml
mozmlops/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
mozmlops/.github/workflows/: ci-cd.yml
mozmlops/docs/: conf.py  example.ipynb  make.bat
mozmlops/src/mozmlops/: __init__.py
mozmlops/tests/: test_mozmlops.py
src/mozmlops/: __init__.py  artifact_store.py  cloud_storage_api_client.py
src/mozmlops/examples/image_classifier/: README.md  image_classifier.py
src/mozmlops/templates/: Dockerfile  Dockerfile-metaflow  Dockerfile-rayserve  README.Docker.md  README.md  requirements.outerbounds.txt  requirements.rayserve.txt  requirements.txt  serve_config.yaml  template_flow.py  template_ray_serve.py
tests/: __init__.py  test_artifact_store.py
tests/integration/: __init__.py  test__introductory_message.py  test_artifact_store.py  test_cloud_storage_api_client.py
tests/unit/: test_cloud_storage_api_client.py  test_example.py
