[tool.poetry]
name = "mozmlops"
version = "0.1.4"
description = "A package for getting your models into production"
authors = ["Mozilla MLOps"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-core = "^2.19.0"
google-cloud-storage = "^2.16.0"
numpy = "<2.0.0"
wandb = "^0.17.3"
outerbounds = {extras = ["gcp"], version = "^0.3.77"}
ruff = "^0.4.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[tool.pytest.ini_options]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
]
addopts = ["-m not integration"]

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
